# noti_bot

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260315_01_initial_schema.py  20260315_02_add_sticker_and_last_bot_message.py
bot/: __main__.py  app.py  config.py  run.py  setup_bot.py
bot/common/: logging.py  utills.py
bot/enums/: pictures_notes.py  stickers.py
bot/handlers/: __init__.py  add_notification.py  delete_notification.py  register.py  start.py
bot/keyboards/: delete_notification.py  new_notification.py  share_contact.py
bot/postgres/: crud.py  db.py  schema.py
bot/scheduler/: crontab  delivery.py  schedule_notifications_cron_script.py  send_notifications_cron_script.py
bot/states/: notifications.py  register.py
bot/web/: __init__.py  app.py
scripts/: manage_migrations.sh
tests/: test_scheduler_delivery.py
