[project]
name = "noti-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.7.0",
    "asyncpg==0.30.0",
    "loguru==0.7.3",
    "pydantic-settings==2.3.1",
    "redis==5.2.1",
    "sqlalchemy>=2.0.47",
    "timezonefinder>=8.2.1",
]
